updating package.json with repo info

--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
     "Bitcoin"
   ],
   "author": "Neel Krishnan",
-  "license": "GPL"
+  "license": "GPL",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neel-digitalbtc/digitalx-node.git"
+  },
+  "bugs": {
+    "url": "https://github.com/neel-digitalbtc/digitalx-node/issues"
+  },
+  "homepage": "https://github.com/neel-digitalbtc/digitalx-node"
 }
